--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <h1>Hello Jenkins!</h1>
+        <h1 style="color:red">Hello Jenkins</h1>
     </body>
 </html>
