--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <h1 style="color:red">Hello Jenkins</h1>
+        <h1 style="color:green">Hello Jenkins</h1>
+        <button type="button" onclick="alert('Cutucado');">Cutucar</button>
     </body>
 </html>
